--- a/_posts/Knowledge/Knowledge/2024-04-02-eGov 가이드 학습하기.md
+++ b/_posts/Knowledge/Knowledge/2024-04-02-eGov 가이드 학습하기.md
@@ -147,7 +147,8 @@ typora-root-url: ../../..
 - Build는 의존성 Install 전까지 (JAR나 WAR패키징 까지)
 - Install은 Build를 포함하여 의존성 Install 까지
 
-**boot의 config 코드 분석? (직접 주석 달음. 주석과 코드 함께 보기)**
+**boot의 java config 코드 분석? (직접 주석 달음. 주석과 코드 함께 보기)**  
+순수스프링 xml은 "아래 easycompany 해답 파트" 참고
 
 <details><summary><b>EgovConfigAspect</b></summary>
 <div markdown="1"><br>
@@ -2258,20 +2259,41 @@ MVC 패턴 개발은 앞에서도 봤고, 잘 이해하고 있어서 **로그인
 
 **@ModelAttribute를 메소드에서 사용 시 -> 사용안해야 할 때:** "공통으로 사용할 이유가 없을 때" or "파라미터 사용으로 인해 URL패턴이 안맞는 경우가 하나라도 존재할 때"
 
-- ```java
-  @RequestMapping(value = "/updateEmployee.do", method = RequestMethod.GET)
-  public String defaultUpdateEmployee(@RequestParam("employeeid") String employeeid, ModelMap model) {
-      model.addAttribute("employee", getEmployeeInfo(employeeid));
-      return "modifyemployee";
-  }
+- 예시 (안 맞는 URL패턴 있는 경우):
   
-  //@ModelAttribute("employee") //-> 이거 안써야 잘 동작.
-  //String employeeid를 스프링이 찾지 못해 에러가 뜬다. 업데이트 URL은 ...?id 로 파라미터 준다고 하지만, 다른 URL은 파라미터 안주는것도 있음.
-  //그니까 에러 뜸. 안쓰는게 맞음. 어차피 defaultUpdateEmployee 에서만 필요한거라 "공통으로 쓸 이유도 없음". String id 못 찾는것도 여전히 문제고.
-  public Employee getEmployeeInfo(String employeeid) {
-      return employeeService.getEmployeeInfoById(employeeid);
-  }
-  ```
+  - ```java
+    @RequestMapping(value = "/updateEmployee.do", method = RequestMethod.GET)
+    public String defaultUpdateEmployee(@RequestParam("employeeid") String employeeid, ModelMap model) {
+        model.addAttribute("employee", getEmployeeInfo(employeeid));
+        return "modifyemployee";
+    }
+    
+    //@ModelAttribute("employee") //-> 이거 안써야 잘 동작.
+    //String employeeid를 스프링이 찾지 못해 에러가 뜬다. 업데이트 URL은 ...?id 로 파라미터 준다고 하지만, "다른 URL은 파라미터 안주는것"도 있음.
+    //그니까 에러 뜸. 안쓰는게 맞음. 어차피 defaultUpdateEmployee 에서만 필요한거라 "공통으로 쓸 이유도 없음". String id 못 찾는것도 여전히 문제고.
+    public Employee getEmployeeInfo(String employeeid) {
+        return employeeService.getEmployeeInfoById(employeeid);
+    }
+    ```
+  
+- 원래는 아래처럼 써야징
+
+  - ```java
+    //deptInfoOneDepthCategory 객체를 JS에서 바로 사용하기 위해.
+    @ModelAttribute("deptInfoOneDepthCategory")
+    private Map<String, String> referenceDataOneDepthDept() {
+        return departmentService.getDepartmentIdNameList("1");
+    }
+    
+    //employee 추가하는 form 화면이라면 이걸 사용해줘야 null pointer 에러 방지.
+    //물론, form 화면 매핑하는 GET컨트롤러에서 직접 model.addAttribute("employee", new Emplyee()) 해도 됨.
+    //더 쉬운건 @ModelAttribute("employee") Employee employee 이렇게 메소드 파라미터로 넣으면 model.addAttribute를 자동으로 해준다는거~!
+    @ModelAttribute("employee")
+    public Employee defaultEmployee() {
+        return new Employee();
+    }
+    ```
+
 
 <details><summary><b>@ModelAttribute를 메소드에서 사용 코드:</b></summary>
 <div markdown="1"><br>
@@ -2566,7 +2588,7 @@ $(document).ready(function(){
 
 실행환경 잘 적응했나 예제 문제로 학습하기(배치는 없음)
 
-<details><summary><b>프로젝트 구조 분석:</b></summary>
+<details><summary><b>프로젝트 구조 분석: xml</b></summary>
 <div markdown="1"><br>
 1. **src/main/webapp:**
    - css
@@ -2619,6 +2641,7 @@ $(document).ready(function(){
 4. **pom.xml** -> Maven 빌드 툴 사용 (gradle이면 build.gradle 사용)
 </div>
 </details>
+
 <br>
 
 **WEB-INF 하위의 context-servlet.xml과 resources 하위의 context-*.xml 들이 설정이 많이 겹치는데 역할이 다르다.**
@@ -2837,58 +2860,28 @@ $(document).ready(function(){
 ```
 </div>
 </details>
+<br>
+
+**(학습?) 반환타입:**
+
+- 반환타입 void: 뷰리졸버는 요청URL과 동일한 뷰를 탐색해서 반환!
+
+  - ```java
+    @RequestMapping(value="/loginSuccess.do", method=RequestMethod.GET)
+    public void loginSuccess() { // loginSuccess.jsp 자동 렌더링
+    }
+    ```
+
+- **반환타입 String**: 해당 반환 문자열과 동일한 뷰를 탐색해서 반환! -> **주로 사용**
 
 <br>
 
-void를 반환하면 loginSuccess.jsp를 자동으로 렌더링함 -> 원래 String 반환으로 직접 jsp 이름을 반환 했었음. (위에서 정리했었긴 함!)
-
-```java
-@RequestMapping(value="/loginSuccess.do", method=RequestMethod.GET)
-public void loginSuccess() {
-}
-```
-
-@ModelAttribute 좀 더 심화  
-(위에서 정리했었긴 함!)
-
-- 안써야 할 때?
-
-  - ```java
-    @RequestMapping(value = "/updateEmployee.do", method = RequestMethod.GET)
-    public String defaultUpdateEmployee(@RequestParam("employeeid") String employeeid, ModelMap model) {
-        model.addAttribute("employee", getEmployeeInfo(employeeid));
-        return "modifyemployee";
-    }
-    
-    //@ModelAttribute("employee") //-> 이거 안써야 잘 동작.
-    //String employeeid를 스프링이 찾지 못해 에러가 뜬다. 업데이트 URL은 ...?id 로 주겠지만 다른 URL은 아니잖아.
-    //그니까 에러 뜸. 안쓰는게 맞음. 어차피 defaultUpdateEmployee 에서만 필요한거라 "공통으로 쓸 이유도 없음". String id 못 찾는것도 여전히 문제고.
-    public Employee getEmployeeInfo(String employeeid) {
-        return employeeService.getEmployeeInfoById(employeeid);
-    }
-    ```
-
-- 원래는 이렇게 써야지
-
-  - ```java
-    //deptInfoOneDepthCategory 객체를 JS에서 바로 사용하기 위해.
-    @ModelAttribute("deptInfoOneDepthCategory")
-    private Map<String, String> referenceDataOneDepthDept() {
-        return departmentService.getDepartmentIdNameList("1");
-    }
-    
-    //employee 추가하는 form 화면이라면 이걸 사용해줘야 null pointer 에러 방지.
-    //물론, form 화면 매핑하는 GET컨트롤러에서 직접 model.addAttribute("employee", new Emplyee()) 해도 됨.
-    //더 쉬운건 @ModelAttribute("employee") Employee employee 이렇게 인자로 넣으면 model.addAttribute를 자동으로 해준다는거~!
-    @ModelAttribute("employee")
-    public Employee defaultEmployee() {
-        return new Employee();
-    }
-    ```
-
 **(학습?) Pagination Tag**
 
-[이거봐-공문](https://www.egovframe.go.kr/wiki/doku.php?id=egovframework%3Arte%3Aptl%3Aview%3Apaginationtag) 로 페이징 페이지 만드는것 좀 따로 정리. 커스텀 당연히 가능. 이거보고 커스텀 해야할듯ㅇㅇ.
+[이거봐-공문](https://www.egovframe.go.kr/wiki/doku.php?id=egovframework%3Arte%3Aptl%3Aview%3Apaginationtag) 로 페이징 페이지 만드는것 좀 따로 정리. 커스텀 당연히 가능.  
+체크리스트 게시물에 커스텀 예시 있음.
+
+<br>
 
 **(학습?) 여러가지 Exception**
 
@@ -2915,6 +2908,7 @@ public void loginSuccess() {
       try-catch에서 throw로 EgovBizException 직접 발생시켜도 될텐데...
     - **다국어 지원 메시지, 확장성, 표준화 로직** 때문에 사용!
 
+<br>
 
 **(학습?) 여러가지 Validator**
 
@@ -2958,5 +2952,5 @@ public void loginSuccess() {
     4. JSP에 BindingResult결과도 보여주고싶다면 Bean Validation이나 Jakarta Commons나 똑같이 Model에 담아서 보여줌.  
        타임리프의 th:error와 유사하게 JSP도 form:errors로 가능 (th:error로 자동으로 bindingresult확인하여 @NotNull("이미지가 없습니다") 이런 메시지 출력, 물론 message.properties와 연동도 되고)
 
-- **Spring 어노테이션 기반: 이건 우리가 하던 그거**임 ㅇㅇ. 이미 옛날에 정리해둠.
+- **Spring 어노테이션 기반: Bean Validation 방식으로써 @NotNull 이런식으로 사용하던 그 방식**
 
