--- a/_posts/Major/Database/2022-06-20-DB 서론(1).md
+++ b/_posts/Major/Database/2022-06-20-DB 서론(1).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+데이터베이스의 기본 개념과 정보 환경에 대해 설명합니다. 데이터에서 지혜로 이어지는 지식 삼각형, 다양한 처리 시스템(정보, 자료, 온라인, 분산), 데이터베이스의 정의와 특성(통합, 저장, 운영, 공용), 그리고 개체와 관계 개념을 체계적으로 다루고 있습니다.
+
+<br>
+
 # 정보 환경
 
 > 정리 하고 싶은 부분만 정리한 것이기 때문에 내용이 탄탄하지는 않다는점 참고
