--- a/_posts/Major/Database/2022-06-21-DB 데이터베이스(관리) 시스템(2).md
+++ b/_posts/Major/Database/2022-06-21-DB 데이터베이스(관리) 시스템(2).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+DBMS의 주요 기능, 발전 과정, 데이터베이스 시스템의 구성, 3단계 구조, 그리고 데이터 언어(DDL, DML, DSL, DCL)에 대해 설명합니다.
+
+<br>
+
 # 데이터베이스 관리 시스템(DBMS)
 
 **DBMS** : 응용 프로그램과 데이터 사이의 **중재자**로서 모든 응용 프로그램(사용자)들이 데이터베이스를 공용(범용 소프트웨어)
