--- a/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
+++ b/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+관계 데이터베이스의 개념과 구조, 관계대수와 관계해석의 원리를 설명합니다. 테이블 집합으로 구성된 관계 데이터베이스의 기본 요소(릴레이션, 애트리뷰트, 투플, 도메인), 다양한 키 유형, 그리고 관계대수(절차적)와 관계해석(비절차적) 언어의 연산자와 질의문 표현 방법을 체계적으로 다루고 있습니다.
+
+<br>
+
 # 관계 데이터베이스
 
 **테이블들의 집합으로 표현한것이 관계 데이터베이스(RDB)**  
