--- a/_posts/Major/Database/2022-08-25-DB SQL(4).md
+++ b/_posts/Major/Database/2022-08-25-DB SQL(4).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+ SQL의 주요 특징, 스키마와 카탈로그 개념, DDL(CREATE, ALTER, DROP), DML(SELECT, UPDATE, INSERT, DELETE) 명령어, 다양한 조인 방식, 부속 질의문, 그리고 뷰의 생성 및 조작에 대해 설명합니다.
+
+<br>
+
 ## SQL - Structured Query Language
 
 **SQL의 특징**
