--- a/_posts/Major/Database/2022-08-26-DB 데이터 종속성과 정규화(5).md
+++ b/_posts/Major/Database/2022-08-26-DB 데이터 종속성과 정규화(5).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+데이터베이스의 종속성과 정규화 과정을 설명합니다. 삭제/삽입/갱신 이상 현상의 원인, 함수종속(완전/부분/이행), 다치종속, 조인종속의 개념, 그리고 제1정규형부터 제5정규형까지의 정규화 단계와 역정규화 기법을 체계적으로 다루고 있습니다.
+
+<br>
+
 ## 데이터 종속성과 정규화
 
 ### 3종류 이상
