--- a/_posts/Major/Database/2022-08-27-DB 데이터 모델링(6).md
+++ b/_posts/Major/Database/2022-08-27-DB 데이터 모델링(6).md
@@ -12,6 +12,10 @@ typora-root-url: ../../..
 
 
 
+개체와 관계의 개념, 사상 원소 수, 참여 제약조건, 존재 종속성, 그리고 ERD 표기법(I/E, Barker, Chen notation)에 대해 설명합니다.
+
+<br>
+
 ## 데이터 모델링
 
 **참고로 E-R Model을 알아두기 위해 정리**
