--- a/_posts/Major/Database/2022-08-28-DB 데이터베이스 설계(7).md
+++ b/_posts/Major/Database/2022-08-28-DB 데이터베이스 설계(7).md
@@ -12,6 +12,10 @@ typora-root-url: ../../..
 
 
 
+데이터베이스 설계의 전체 과정과 각 단계별 핵심 내용을 설명합니다. 요구조건 분석부터 개념적 설계(E-R 다이어그램), 논리적 설계(스키마 변환), 물리적 설계(내부 구조 결정), 구현 단계까지의 데이터베이스 생명 주기와 설계 전략, 고려사항을 체계적으로 다루고 있습니다.
+
+<br>
+
 ## 데이터베이스 설계
 
 **데이터베이스 생명 주기 : 요구조건 분석 -> 설계 -> 구현 -> 운영 -> 감시 및 개선(되돌림 구조)**
