--- a/_posts/Major/Numerical_Analysis/2022-06-31-(Python)다항식의 보간법 - 뉴턴, 라그랑주.md
+++ b/_posts/Major/Numerical_Analysis/2022-06-31-(Python)다항식의 보간법 - 뉴턴, 라그랑주.md
@@ -12,6 +12,10 @@ typora-root-url: ../../..
 
 
 
+선형 보간법, 뉴턴 보간법, 라그랑주 보간법의 개념과 Python에서의 구현 방법을 설명합니다. numpy.interp 함수를 활용한 선형 보간법과 scipy를 이용한 고차 다항식 보간법의 예제를 통해 실제 적용 방법을 보여줍니다.
+
+<br>
+
 ## 다항식의 보간법
 
 **선형, 비선형 보간법(실제 식을 모르니 보간하는것이다.)**
