--- a/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
+++ b/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+프로그래밍 언어의 기본 개념과 구조를 설명합니다. 어휘구조, 구문법, 의미론과 같은 언어 이론의 기초부터 데이터/제어 추상화, 다양한 자료형 시스템, 자동 형변환 원리, 그리고 명령형, 함수형, 논리형, 객체지향 프로그래밍 패러다임의 특징을 비교하여 다루고 있습니다.
+
+<br>
+
 # PL(Programming Language)란?
 
 > 정리 하고 싶은 부분만 정리한 것이기 때문에 내용이 탄탄하지는 않다는점 참고
