--- a/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
+++ b/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+정규식, 문법 형태, 유도(좌측/우측), 모호성과 그 해결 방법, 그리고 BNF와 EBNF 표기법에 대해 설명합니다. 특히 모호성은 우선순위 적용이나 언어 구문 변경을 통해 해결할 수 있습니다.
+
+<br>
+
 # 구문법 - 문법검사
 
 `좌측, 우측 유도`와 `모호성` 구분하고 `좌, 우 결합`과 햇갈리지말고 구분할 것
