--- a/_posts/Major/Programming_Language/2022-08-21-PL 의미론(3).md
+++ b/_posts/Major/Programming_Language/2022-08-21-PL 의미론(3).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+프로그래밍 언어의 의미론과 추상 구문 트리(AST) 해석 방식을 설명합니다. 정적/동적 유효범위 규칙, 상태와 상태 변환 함수, 인터프리터의 작동 원리, 그리고 연산자의 좌결합과 우결합 특성을 다루고 있습니다.
+
+<br>
+
 # 의미론 - AST
 
 **정적 유효범위(Static scope) 규칙** : 선언된 이름은 선언된 블록 내에서만 유효
