--- a/_posts/Major/Programming_Language/2022-08-22-PL 타입시스템(4).md
+++ b/_posts/Major/Programming_Language/2022-08-22-PL 타입시스템(4).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+강한/약한 타입 언어, 정적/동적 타입 언어의 특징과 차이점, 대표적인 언어 예시(Java, C, Python, JavaScript), 안전한 타입 시스템의 개념, 그리고 언어 S의 타입 시스템 구현에 대해 설명합니다.
+
+<br>
+
 # 서론
 
 **데이터 타입** = 값의 집합 + 연산의 집합
