--- a/_posts/Major/Programming_Language/2022-08-23-PL 함수(5).md
+++ b/_posts/Major/Programming_Language/2022-08-23-PL 함수(5).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+프로그래밍 언어의 함수 개념과 매개변수 전달 방식을 설명합니다. 함수와 프로시저의 차이, 정적/동적 유효범위 규칙, 그리고 값 전달, 참조 전달, 값-결과 전달, 이름 전달 방식의 특징과 차이점을 예제를 통해 비교하여 다루고 있습니다.
+
+<br>
+
 # 함수
 
 **함수 정의 및 호출 – 언어 S: 함수 확장**
