--- a/_posts/Major/Programming_Language/2022-08-24-PL 예외(6).md
+++ b/_posts/Major/Programming_Language/2022-08-24-PL 예외(6).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+예외의 정의, 발생, 처리 방법과 예외 전파, 종료 모델, Python과 Java의 예외 처리 문법, 오류 메시지 생성 방법, 그리고 컴파일 시간에 이루어지는 예외 검사(검사 예외와 비검사 예외)에 대해 설명합니다.
+
+<br>
+
 # 예외 처리
 
 **예외(Exceptions) - 심각하지 않은 오류**
