--- a/_posts/Major/Programming_Language/2022-08-25-PL 객체와 클래스(7).md
+++ b/_posts/Major/Programming_Language/2022-08-25-PL 객체와 클래스(7).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+객체지향 프로그래밍 언어의 역사와 핵심 개념을 설명합니다. Simula-67부터 Java, Python까지 주요 객체지향 언어의 발전 과정, 캡슐화 원리, 정적/실체 변수와 메소드의 차이, 그리고 Java, Python, C++에서의 클래스 구현 방식과 제네릭/템플릿 프로그래밍 특징을 비교하여 다루고 있습니다.
+
+<br>
+
 # 객체지향 언어 역사
 
 **Simula-67, Smalltalk, C++, Java**
