--- a/_posts/Major/Programming_Language/2022-08-26-PL 상속(8).md
+++ b/_posts/Major/Programming_Language/2022-08-26-PL 상속(8).md
@@ -11,6 +11,10 @@ sidebar:
 
 
 
+Java, C++, Python에서의 상속 구현 방식, 다형 참조와 동적 바인딩, 타입 캐스팅, 추상 클래스와 가상 함수의 개념, 그리고 다중 상속의 특징에 대해 설명합니다.
+
+<br>
+
 ## 상속
 
 **상속 – 자식 클래스가 부모 클래스를 포함하는 집합 느낌(부모 메소드, 변수 + 자신꺼 사용하니까)**
