파일명 특수기호 xml에러 해소

--- a/_posts/Major/Computer_Network/2024-06-06-OSI 7계층과 TCP,IP 4계층 모델 완벽 가이드.md
+++ b/_posts/Major/Computer_Network/2024-06-06-OSI 7계층과 TCP,IP 4계층 모델 완벽 가이드.md
@@ -1,5 +1,5 @@
 ---
-title:  "OSI 7계층과 TCP&IP 4계층 모델 완벽 가이드"
+title:  "OSI 7계층과 TCP/IP 4계층 모델 완벽 가이드"
 categories : [Computer_Network]
 tag : [네트워크,OSI7계층,TCP/IP,프로토콜,네트워크장비,통신모델]
 toc: true
