--- a/_posts/Language/Spring/2024-11-02-eGov 가이드 학습하기.md
+++ b/_posts/Language/Spring/2024-11-02-eGov 가이드 학습하기.md
@@ -1,6 +1,6 @@
 ---
 title: "eGov 가이드 학습하기"
-categories : [Knowledge]
+categories : [Spring]
 tag : [spring, 스프링, 스프링부트, eGov, 전자정부프레임워크]
 toc: true
 toc_sticky: true
